// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`egapro: should return ml and pc 1`] = `
Array [
  Object {
    "declarationUrl": "https://index-egapro.travail.gouv.fr/mentions-legales",
    "maxScore": 4,
    "mention": "Mentions légales",
    "missingTrackers": Array [],
    "missingWords": Array [],
    "score": 4,
    "slug": "ml",
  },
  Object {
    "declarationUrl": "https://index-egapro.travail.gouv.fr/politique-confidentialite",
    "maxScore": 4,
    "mention": "Politique de confidentialité",
    "missingTrackers": Array [],
    "missingWords": Array [],
    "score": 4,
    "slug": "pc",
  },
]
`;

exports[`ressourcerie: should return ml and pc 1`] = `
Array [
  Object {
    "declarationUrl": "https://ressourcerie.fabrique.social.gouv.fr/mentions-legales",
    "maxScore": 4,
    "mention": "Mentions légales",
    "missingTrackers": Array [],
    "missingWords": Array [],
    "score": 4,
    "slug": "ml",
  },
  Object {
    "declarationUrl": "https://ressourcerie.fabrique.social.gouv.fr/politique-confidentialite",
    "maxScore": 4,
    "mention": "Politique de confidentialité",
    "missingTrackers": Array [],
    "missingWords": Array [],
    "score": 4,
    "slug": "pc",
  },
]
`;

exports[`should detect ml : mentions légales 1`] = `
Array [
  Object {
    "declarationUrl": "https://ressourcerie.fabrique.social.gouv.fr/mentions",
    "maxScore": 4,
    "mention": "Mentions légales",
    "missingTrackers": Array [],
    "missingWords": Array [
      "directeur (ou) directrice",
      "publication",
      "hébergeur (ou) hébergement",
      "éditeur (ou) édité par (ou) editeur (ou) edité par",
    ],
    "score": 0,
    "slug": "ml",
  },
  Object {
    "maxScore": 0,
    "mention": null,
    "missingTrackers": Array [],
    "missingWords": Array [],
    "score": 0,
    "slug": "pc",
  },
]
`;

exports[`should detect pc : Données personnelles 1`] = `
Array [
  Object {
    "maxScore": 0,
    "mention": null,
    "missingTrackers": Array [],
    "missingWords": Array [],
    "score": 0,
    "slug": "ml",
  },
  Object {
    "declarationUrl": "https://ressourcerie.fabrique.social.gouv.fr/some",
    "maxScore": 4,
    "mention": "Données personnelles",
    "missingTrackers": Array [],
    "missingWords": Array [
      "finalité",
      "durée de conservation",
      "sous-traitants (ou) sous traitants",
    ],
    "score": 1,
    "slug": "pc",
  },
]
`;

exports[`should return ml and pc and thirdparties data 1`] = `
Array [
  Object {
    "declarationUrl": "https://ressourcerie.fabrique.social.gouv.fr/mentions-legales",
    "maxScore": 4,
    "mention": "Mentions légales",
    "missingTrackers": Array [],
    "missingWords": Array [],
    "score": 4,
    "slug": "ml",
  },
  Object {
    "declarationUrl": "https://ressourcerie.fabrique.social.gouv.fr/politique-confidentialite",
    "maxScore": 5,
    "mention": "Politique de confidentialité",
    "missingTrackers": Array [
      "jQuery",
    ],
    "missingWords": Array [],
    "score": 4,
    "slug": "pc",
  },
]
`;
